# La-liga-fantasy-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
la_liga/: README.md  pyproject.toml
la_liga/notebooks/: 00_data_cleaning.ipynb  00_data_processing.ipynb  01_eda.ipynb  01_player_analysis.ipynb  02_train_test_mode.ipynb  all_seasons_clean.csv  all_seasons_no_outliers.csv  predictions.py  teams_data.csv
la_liga/scrapers/: concatenate.py  fref_deffensive_actions.py  fref_misc.py  fref_passing.py  get2023.py  getData.py  main.py  utils.py
model_related/: .gitignore  first_approach.ipynb  first_version.ipynb  predictions.ipynb  pyproject.toml
model_related/data/: season_2023.csv
model_related/pickles/: all_matches.pkl
model_related/scrapers/: concat_all.py  concatenate.ipynb  concatenate.py  first_approach.ipynb  format.py  fref.py  fref_deffensive_actions.py  fref_gk.py  fref_misc.py  fref_passing.py  fref_passing_type.py  fref_players.py  fref_possession.py  getMatches.py  main.py  test.ipynb  utils.py
model_related/scrapers/all_seasons/2017-2018/: 2017-2018_chunk_0.csv  2017-2018_chunk_0_goalkeeper.csv  2017-2018_chunk_0_summary.csv  2017-2018_chunk_1.csv  2017-2018_chunk_10.csv  2017-2018_chunk_10_goalkeeper.csv  2017-2018_chunk_10_misc.csv  2017-2018_chunk_10_possesion.csv  2017-2018_chunk_11.csv  2017-2018_chunk_11_deffensive.csv  2017-2018_chunk_11_goalkeeper.csv  2017-2018_chunk_11_misc.csv  2017-2018_chunk_12.csv  2017-2018_chunk_12_goalkeeper.csv  2017-2018_chunk_12_passing.csv  2017-2018_chunk_12_possesion.csv  2017-2018_chunk_12_summary.csv  2017-2018_chunk_13.csv  2017-2018_chunk_13_goalkeeper.csv  2017-2018_chunk_13_misc.csv  2017-2018_chunk_13_passing_type.csv  2017-2018_chunk_13_summary.csv  2017-2018_chunk_14.csv  2017-2018_chunk_14_deffensive.csv  2017-2018_chunk_14_goalkeeper.csv  2017-2018_chunk_14_misc.csv  2017-2018_chunk_14_passing.csv  2017-2018_chunk_14_possesion.csv  2017-2018_chunk_15.csv  2017-2018_chunk_15_goalkeeper.csv  2017-2018_chunk_15_passing_type.csv  2017-2018_chunk_16.csv  2017-2018_chunk_16_goalkeeper.csv  2017-2018_chunk_16_passing.csv  2017-2018_chunk_16_possesion.csv  2017-2018_chunk_17.csv  2017-2018_chunk_17_goalkeeper.csv  2017-2018_chunk_17_passing.csv  2017-2018_chunk_18.csv  2017-2018_chunk_18_deffensive.csv  (+112 more)
model_related/scrapers/season_data/: all_seasons_gk.csv  season_2017-2018.csv  season_2018-2019.csv  season_2019-2020.csv  season_2020-2021.csv  season_2021-2022.csv  season_2022-2023.csv  season_2023-2024.csv
web/: .dockerignore  Dockerfile  home_page.py  pyproject.toml
web/data/: players_data.csv  teams_data.csv
web/pages/: prediction.py  visualization.py
(+2045 files in other folders)
