[tool.poetry]
name = "practicas-memoria"
version = "0.1.0"
description = "Repositorio con el codigo"
authors = ["Alejandro.F"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
