[tool.poetry]
name = "practicas-memoria"
version = "0.1.0"
description = "Repositorio con el codigo"
authors = ["Alejandro.F"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
openpyxl = "^3.1.2"
bs4 = "^0.0.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
