[tool.poetry]
name = "practicas_memoria"
version = "0.1.0"
description = "Repositorio con el codigo"
authors = ["Alejandro.F <alejandro.fernandezarmas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.2"
requests = "^2.31.0"
openpyxl = "^3.1.2"
bs4 = "^0.0.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
jupyter = "^1.0.0"
selenium = "^4.15.2"
termcolor = "^2.4.0"
art = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
