[tool.poetry]
name = "practicas_memoria"
version = "0.1.0"
description = "webpage"
authors = ["Alejandro.F <alejandro.fernandezarmas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.7"
streamlit = "^1.30.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
