[tool.poetry]
name = "practicas_memoria"
version = "0.1.0"
description = "webpage"
authors = ["Alejandro.F <alejandro.fernandezarmas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
